unpackaged/main/default/objects/Reponse_enquete__c/Reponse_enquete__c.object-meta.xml
<CustomObject>
    <description>Permet de stocker la réponse d&#39;une enquête (élements principaux : tel que NPS score, CSAT, Verbatims...) (Enquêtes faites dans Qualtrics)</description>
    <label>Enquete - Réponse</label>
    <nameField>
        <label>Nom de l&#39;enquete</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enquetes - Réponses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>