unpackaged/main/default/objects/Reponse_enquete__c/fields/Categorie__c.field-meta.xml
<CustomField>
    <fullName>Categorie__c</fullName>
    <label>Catégorie</label>
    <length>20</length>
    <type>Text</type>
</CustomField>