unpackaged/main/default/objects/Reponse_enquete__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lien avec l&#39;objet &quot;Contact&quot;</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Enquetes - Réponses</relationshipLabel>
    <relationshipName>Enquetes_Reponses</relationshipName>
    <type>Lookup</type>
</CustomField>