unpackaged/main/default/objects/Reponse_enquete__c/fields/Date_de_reponse__c.field-meta.xml
<CustomField>
    <fullName>Date_de_reponse__c</fullName>
    <description>Date de la réponse à l&#39;enquête</description>
    <label>Date de réponse</label>
    <type>DateTime</type>
</CustomField>