unpackaged/main/default/objects/Reponse_enquete__c/fields/Libelle_CES__c.field-meta.xml
<CustomField>
    <fullName>Libelle_CES__c</fullName>
    <description>Stocke la valeur textuelle de score de la question sur l&#39;effort du questionnaire transactionnel</description>
    <label>Libellé CES</label>
    <length>50</length>
    <type>Text</type>
</CustomField>