unpackaged/main/default/objects/Reponse_enquete__c/fields/Libelle_CSAT__c.field-meta.xml
<CustomField>
    <fullName>Libelle_CSAT__c</fullName>
    <description>Stocke la valeur textuel de la question CSAT de l&#39;enquête transactionnelle</description>
    <label>Libellé CSAT</label>
    <length>50</length>
    <type>Text</type>
</CustomField>