unpackaged/main/default/objects/Reponse_enquete__c/fields/Nom_enquete__c.field-meta.xml
<CustomField>
    <fullName>Nom_enquete__c</fullName>
    <description>Stocke le nom de l&#39;enquête</description>
    <label>Nom de l&#39;enquete</label>
    <length>50</length>
    <type>Text</type>
</CustomField>