unpackaged/main/default/objects/Reponse_enquete__c/fields/SAD__c.field-meta.xml
<CustomField>
    <fullName>SAD__c</fullName>
    <label>SAD</label>
    <length>50</length>
    <type>Text</type>
</CustomField>