unpackaged/main/default/objects/Reponse_enquete__c/fields/Score_CES__c.field-meta.xml
<CustomField>
    <fullName>Score_CES__c</fullName>
    <description>Stocke le score de la question sur l&#39;effort du questionnaire transactionnel</description>
    <label>Score CES</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>