unpackaged/main/default/objects/Reponse_enquete__c/fields/Score_CSAT__c.field-meta.xml
<CustomField>
    <fullName>Score_CSAT__c</fullName>
    <description>Stocke la valeur numérique du score CSAT d&#39;un questionnaire transactionnel</description>
    <label>Score CSAT</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>