unpackaged/main/default/objects/Reponse_enquete__c/fields/Score_NPS__c.field-meta.xml
<CustomField>
    <fullName>Score_NPS__c</fullName>
    <description>Stocke la réponse de la première question du questionnaire relationnelle (à savoir la question NPS)</description>
    <label>Score NPS</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>