unpackaged/main/default/objects/Reponse_enquete__c/fields/Statut_Contact__c.field-meta.xml
<CustomField>
    <fullName>Statut_Contact__c</fullName>
    <description>En fonction du score NPS, détermine le statut : Promoteur, Passif ou Détracteur</description>
    <formula>IF(Score_NPS__c &gt; 8, $Label.Qualtrics_PROMOTEUR2,  IF(Score_NPS__c &gt; 6 &amp;&amp; Score_NPS__c &lt; 9, $Label.Qualtrics_PASSIVE,  IF(Score_NPS__c &lt; 7, $Label.Qualtrics_DETRACTEUR, &quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Statut Contact</label>
    <type>Text</type>
</CustomField>