unpackaged/main/default/objects/Reponse_enquete__c/fields/Statut_reponse__c.field-meta.xml
<CustomField>
    <fullName>Statut_reponse__c</fullName>
    <description>Permet d&#39;indiquer si une réponse a été reçu. (Permettra dans le futur d&#39;identifier si le client a eu une enquête et qu&#39;il n&#39;a pas répondu)</description>
    <label>Statut enquête</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non répondu</fullName>
            </value>
            <value>
                <fullName>Répondu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>