unpackaged/main/default/objects/Reponse_enquete__c/fields/URL_reponse__c.field-meta.xml
<CustomField>
    <fullName>URL_reponse__c</fullName>
    <description>Stocke la réponse à l&#39;enquête. Sans avoir d&#39;accès à l&#39;outil Qualtrics, la réponse est accessible</description>
    <label>URL de la réponse</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>