unpackaged/main/default/objects/Reponse_enquete__c/fields/Verbatims_NPS__c.field-meta.xml
<CustomField>
    <fullName>Verbatims_NPS__c</fullName>
    <description>Stocke le commentaire lié à la question NPS de l&#39;enquête relationnelle</description>
    <label>Verbatims NPS</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>