unpackaged/main/default/objects/Reponse_enquete__c/recordTypes/Reponse_CSAT.recordType-meta.xml
<RecordType>
    <fullName>Reponse_CSAT</fullName>
    <active>true</active>
    <description>Type d&#39;enregistrement pour une enquête transactionnelle (CSAT)</description>
    <label>Réponse CSAT</label>
</RecordType>