unpackaged/main/default/objects/Reponse_enquete__c/recordTypes/Reponse_NPS.recordType-meta.xml
<RecordType>
    <fullName>Reponse_NPS</fullName>
    <active>true</active>
    <description>Type d&#39;enregistrement pour une enquête relationnelle (NPS)</description>
    <label>Réponse NPS</label>
</RecordType>